sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-sample-service
  namespace: alb-sample-app
  labels:
    app: httpd
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP 
  selector:
    app: httpd
