sample-ingress-gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-sample-ingress
  namespace: alb-sample-app
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alb-sample-service
            port:
              number: 80
